add --enable-preview JVM flag to execution
applying config to all projects, incl. root